--- a/build.xml
+++ b/build.xml
@@ -6,11 +6,12 @@
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="DiscountEngineX">
     <property environment="env"/>
     <property name="ECLIPSE_HOME" value="../../../eclipse/"/>
+    <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="JUnit 4.libraryclasspath">
-        <pathelement location="./lib/junit.jar"/>
+        <pathelement location="./lib/org.junit_4.12.0.v201504281640/junit.jar"/>
         <pathelement location="./lib/org.hamcrest.core_1.3.0.v201303031735.jar"/>
     </path>
     <path id="DiscountEngineX.classpath">
@@ -57,5 +58,22 @@
     <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
+    </target>
+    <target name="AllTests (2)">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="AllTests" todir="${junit.output.dir}"/>
+            <jvmarg line="-ea"/>
+            <classpath refid="DiscountEngineX.classpath"/>
+        </junit>
+    </target>
+    <target name="junitreport">
+        <junitreport todir="${junit.output.dir}">
+            <fileset dir="${junit.output.dir}">
+                <include name="TEST-*.xml"/>
+            </fileset>
+            <report format="frames" todir="${junit.output.dir}"/>
+        </junitreport>
     </target>
 </project>
